[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio"] }
rand = "0.8.4"
itertools-num = "0.1"
plotters-iced = "0.1"
plotters="0.3"
sysinfo = { version = "0.23", default_features = false }
chrono = { version = "0.4", default-features = false }
